[metadata]
name = braintracer
version = 0.1
author = Sam Clothier
author_email = sam.clothier.18@ucl.ac.uk
description = A complete processing pipeline for anatomical neuronal tracing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samclothier/braintracer
download_url = https://github.com/samclothier/braintracer/archive/refs/tags/0.1.tar.gz
keywords =
	neuroscience
	tracing
	anatomy
	brainglobe
	cellfinder
	brainreg
classifiers =
	Development Status :: 3 - Alpha
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Operating System :: Microsoft :: Windows
	Framework :: Jupyter :: JupyterLab
	Framework :: Matplotlib
	License :: OSI Approved :: MIT License
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Image Recognition
	Natural Language :: English

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
	cellfinder >= 0.4.20
	bgheatmap >= 0.0.3
	opencv-python >= 4.6.0.66
	plotly >= 5.10.0
	fastcluster >= 1.2.0
	shortuuid >= 1.0.9
