[metadata]
name = braintracer
version = 0.2
author = Sam Clothier
author_email = sam.clothier.18@ucl.ac.uk
description = A complete processing pipeline for anatomical neuronal tracing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samclothier/braintracer
download_url = https://github.com/samclothier/braintracer/releases/tag/0.2.tar.gz
keywords =
	neuroscience
	tracing
	anatomy
	brainglobe
	cellfinder
	brainreg
classifiers =
	Development Status :: 3 - Alpha
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Operating System :: Microsoft :: Windows
	Framework :: Jupyter :: JupyterLab
	Framework :: Matplotlib
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Image Recognition
	Natural Language :: English

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
	cellfinder >= 0.4.20
	brainglobe-heatmap >= 0.5.2
	opencv-python >= 4.6.0.66
	plotly >= 5.10.0
	fastcluster >= 1.2.0
	shortuuid >= 1.0.9
	jupyterlab >= 3.6
	statsmodels >= 0.13
	ipyvtklink >= 0.2